--- a/ArkaPong.vcxproj.filters
+++ b/ArkaPong.vcxproj.filters
@@ -18,7 +18,10 @@
     <ClInclude Include="src\Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Utils\GameConstants.h">
+    <ClInclude Include="src\Utils\Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utils\Enums.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Utils\SpatialHash.h">
