--- a/ArkaPong.vcxproj.filters
+++ b/ArkaPong.vcxproj.filters
@@ -5,5 +5,6 @@
     <None Include=".gitignore" />
     <None Include="README.md" />
     <None Include="vcpkg.json" />
+    <None Include="config.json" />
   </ItemGroup>
 </Project>
