--- a/config.json
+++ b/config.json
@@ -1,11 +1,23 @@
 {
-    "window": {
-        "width": 512,
-        "height": 320,
-        "title": "ArkaPong"
-    },
-    "physics": {
-        "collision_method": "spatial_hash",
-        "gravity": 9.81
+  "project": {
+    "name": "ArkaPong",
+    "description": "A simple game of Arkanoid and Pong",
+    "author": "Ignacio Fabián Veiga Martín",
+    "entities": {
+      "ball": {
+        "width": 5,
+        "height": 5,
+        "speed": 128
+      },
+      "paddle": {
+        "width": 8,
+        "height": 32,
+        "speed": 8
+      },
+      "brick": {
+        "width": 8,
+        "height": 16
+      }
     }
+  }
 }
