--- a/ArkaPong/CMakeLists.txt
+++ b/ArkaPong/CMakeLists.txt
@@ -10,4 +10,4 @@ target_include_directories(ArkaPong PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 add_custom_command(TARGET ArkaPong POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
         "${CMAKE_SOURCE_DIR}/assets"
-        "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets")
+        "$<TARGET_FILE_DIR:ArkaPong>/assets")
