Add custom command to copy config.json to output directory after build

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -5,3 +5,9 @@ add_library(core STATIC ${CORE_SOURCES} ${CORE_HEADERS})
 
 target_link_libraries(core SDL2 SDL2main SDL2_mixer SDL2_ttf)
 target_include_directories(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Copy the config.json file to the output directory after the build.
+add_custom_command(TARGET core POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+        "${CMAKE_SOURCE_DIR}/config.json"
+        "$<TARGET_FILE_DIR:core>/config.json")
