--- a/Frontend/CMakeLists.txt
+++ b/Frontend/CMakeLists.txt
@@ -1,7 +1,12 @@
 file(GLOB_RECURSE FRONTEND_SOURCES "*.cpp")
 file(GLOB_RECURSE FRONTEND_HEADERS "*.h")
 
-add_executable(frontend ${FRONTEND_SOURCES} ${FRONTEND_HEADERS})
+add_executable(Frontend ${FRONTEND_SOURCES} ${FRONTEND_HEADERS})
 
-target_link_libraries(frontend core SDL2 SDL2main)
-target_include_directories(frontend PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/imgui-docking ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/imgui-docking/backends)
+target_link_libraries(Frontend Core SDL2 SDL2main)
+target_include_directories(Frontend PUBLIC 
+    ${CMAKE_CURRENT_SOURCE_DIR} 
+    ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/imgui-docking 
+    ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/imgui-docking/backends
+    ${SDL2_SOURCE_DIR}/include
+)
