Refactor header file structure and update include paths for consistency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,60 +1,17 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.20)
 project(ArkaPongGameEngine)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Output directory for executables
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-include(FetchContent)
+# SDL2 buscar en el sistema
+find_package(SDL2 REQUIRED)
+find_package(SDL2_mixer REQUIRED)
+find_package(SDL2_ttf REQUIRED)
 
-# Set the base directory for FetchContent downloads
-set(FETCHCONTENT_BASE_DIR ${CMAKE_SOURCE_DIR}/ThirdParty)
+#message(STATUS "SDL2 include dirs: ${SDL2_INCLUDE_DIRS}")
 
-# Try to find SDL2, SDL2_mixer, SDL2_ttf in the normal way
-find_package(SDL2 QUIET)
-find_package(SDL2_mixer QUIET)
-find_package(SDL2_ttf QUIET)
-
-# If they are not found, use FetchContent to download them
-if(NOT SDL2_FOUND OR NOT SDL2_MIXER_FOUND OR NOT SDL2_TTF_FOUND)
-    message(STATUS "SDL2 libraries not found, downloading with FetchContent...")
-
-    if(NOT SDL2_FOUND)
-        FetchContent_Declare(
-            SDL2
-            GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
-            GIT_TAG release-2.32.0
-        )
-        FetchContent_MakeAvailable(SDL2)
-    endif()
-
-    if(NOT SDL2_mixer_FOUND)
-        FetchContent_Declare(
-            SDL2_mixer
-            GIT_REPOSITORY https://github.com/libsdl-org/SDL_mixer.git
-            GIT_TAG release-2.8.1
-        )
-        FetchContent_MakeAvailable(SDL2_mixer)
-    endif()
-
-    if(NOT SDL2_ttf_FOUND)
-        FetchContent_Declare(
-            SDL2_ttf
-            GIT_REPOSITORY https://github.com/libsdl-org/SDL_ttf.git
-            GIT_TAG release-2.24.0
-        )
-        FetchContent_MakeAvailable(SDL2_ttf)
-    endif()
-endif()
-
-include_directories(
-    ${SDL2_INCLUDE_DIRS}
-    ${SDL2_MIXER_INCLUDE_DIRS}
-    ${SDL2_TTF_INCLUDE_DIRS}
-)
-
-# Add subdirectories
+# Subproyectos
 add_subdirectory(Core)
 add_subdirectory(ArkaPong)
 add_subdirectory(Frontend)
