--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,7 +1,19 @@
-file(GLOB_RECURSE CORE_SOURCES "*.cpp")
-file(GLOB_RECURSE CORE_HEADERS "*.h")
+file(GLOB_RECURSE CORE_SOURCES "src/*.cpp")
+file(GLOB_RECURSE CORE_HEADERS "include/Core/**/*.h")
 
 add_library(Core STATIC ${CORE_SOURCES} ${CORE_HEADERS})
 
-target_link_libraries(Core SDL2 SDL2main SDL2_mixer SDL2_ttf)
-target_include_directories(Core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(Core
+        PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/include/nlohmann-json
+)
+
+target_link_libraries(Core
+        SDL2 SDL2main SDL2_mixer SDL2_ttf
+)
+
+add_custom_command(TARGET Core POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:Core> ${CMAKE_SOURCE_DIR}/ArkaPong/lib/
+        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:Core> ${CMAKE_SOURCE_DIR}/Frontend/lib/
+)
