Refactor path management classes and implement path update methods for improved functionality

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,4 +1,7 @@
-file(GLOB_RECURSE CORE_SOURCES "src/*.cpp")
+file(GLOB_RECURSE CORE_SOURCES
+        "src/Core.cpp"
+        "src/**/*.cpp"
+)
 file(GLOB_RECURSE CORE_HEADERS "include/Core/**/*.h")
 
 add_library(Core STATIC ${CORE_SOURCES} ${CORE_HEADERS})
@@ -6,7 +9,6 @@ add_library(Core STATIC ${CORE_SOURCES} ${CORE_HEADERS})
 target_include_directories(Core
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/include/nlohmann-json
 )
 
 target_link_libraries(Core
